tests/ui/feature-gates/feature-gate-prelude_import.rs
#[prelude_import] //~ ERROR `#[prelude_import]` is for use by rustc only
use std::prelude::v1::*;

fn main() {}
